# GameOfLife

./: CMakeLists.txt
include/: AlwaysNextTurn.hpp  CommandSource.hpp  UserCommand.hpp  board.hpp  board_roller.hpp  board_surface.hpp  board_torus.hpp  field.hpp
src/: AlwaysNextTurn.cpp  CommandSource.cpp  UserCommand.cpp  board.cpp  board_roller.cpp  board_surface.cpp  board_torus.cpp  field.cpp  main.cpp
